# lotus-core

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .spectral.yaml  Makefile  README.md  REPOSITORY-ENGINEERING-CONTEXT.md  agent.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml
src/libs/portfolio-common/: pyproject.toml  requirements.txt
src/libs/portfolio-common/portfolio_common/: analytics_cashflow_semantics.py  build_metadata.py  ca_bundle_a_constants.py  ca_bundle_a_ordering.py  config.py  cost_basis.py  currency_codes.py  database_models.py  db.py  db_base.py  decimal_amounts.py  domain_value_objects.py  downstream_access.py  durable_correlation.py  enterprise_readiness.py  event_mapping.py  event_publisher.py  event_supportability.py  events.py  exceptions.py  fx_rates.py  health.py  health_server.py  http_app_bootstrap.py  idempotency_repository.py  identifiers.py  infrastructure_errors.py  ingestion_evidence.py  kafka_admin.py  kafka_consumer.py  kafka_consumer_execution.py  kafka_producer_policy.py  kafka_utils.py  logging_utils.py  market_prices.py  market_reference_quality.py  metrics_settings.py  models.py  monitoring.py  observability_contracts.py  (+40 more)
src/libs/portfolio-common/portfolio_common/domain/: __init__.py  calculation_lineage.py  cost_basis_method.py  currency.py  decimal_amount.py  holdings_reconciliation.py  portfolio_party_roles.py  timeseries_market_data.py  transaction_control_codes.py
src/libs/portfolio-common/portfolio_common/infrastructure/: __init__.py
src/libs/portfolio-common/portfolio_common/ports/: __init__.py  timeseries_market_data.py
src/libs/portfolio-common/portfolio_common/transaction_domain/: __init__.py  adjustment_cash_leg.py  buy_linkage.py  buy_models.py  buy_reason_codes.py  buy_validation.py  ca_bundle_a_reason_codes.py  ca_bundle_a_reconciliation.py  ca_bundle_a_validation.py  cash_entry_mode.py  control_code_normalization.py  dividend_linkage.py  dividend_models.py  dividend_reason_codes.py  dividend_validation.py  dual_leg_pairing.py  effective_processing_type.py  fx_baseline_processing.py  fx_contract_instrument.py  fx_linkage.py  fx_models.py  fx_reason_codes.py  fx_validation.py  interest_linkage.py  interest_models.py  interest_reason_codes.py  interest_validation.py  portfolio_flow_guardrails.py  sell_linkage.py  sell_models.py  sell_validation.py
src/libs/portfolio-common/tests/: conftest.py
src/services/calculators/cost_calculator_service/: Dockerfile  pyproject.toml
src/services/calculators/cost_calculator_service/app/: average_cost_pool_checkpoint.py  consumer.py  consumer_manager.py  cost_calculation_processor.py  cost_calculation_workflow.py  cost_processing_checkpoint.py  main.py  monitoring.py  repository.py  transaction_processor.py  web.py
src/services/calculators/position_valuation_calculator/: Dockerfile  pyproject.toml
src/services/calculators/position_valuation_calculator/app/: consumer_manager.py  main.py  settings.py  valuation_processor.py  web.py
src/services/event_replay_service/: Dockerfile  pyproject.toml
src/services/event_replay_service/app/: dependencies.py  main.py
src/services/event_replay_service/app/application/: __init__.py  bookkeeping_repair_commands.py  consumer_dlq_replay_commands.py  ingestion_operations_queries.py  ingestion_retry_commands.py  ops_control_commands.py  replay_command_errors.py  replay_payload_dispatcher.py  replay_retry_payloads.py
src/services/event_replay_service/app/routers/: ingestion_operations.py  ingestion_operations_examples.py  replay_mappers.py
src/services/financial_reconciliation_service/: Dockerfile  pyproject.toml
src/services/financial_reconciliation_service/app/: consumer_manager.py  dependencies.py  dtos.py  enterprise_readiness.py  main.py  runtime.py
src/services/financial_reconciliation_service/app/adapters/: __init__.py  reconciliation_finding_mapper.py
src/services/financial_reconciliation_service/app/application/: __init__.py  reconciliation_use_cases.py  record_reconciliation_completion.py
src/services/financial_reconciliation_service/app/consumers/: reconciliation_requested_consumer.py
src/services/financial_reconciliation_service/app/domain/: __init__.py  reconciliation_control.py  reconciliation_policies.py  reconciliation_run_lifecycle_policy.py
src/services/financial_reconciliation_service/app/infrastructure/: __init__.py  reconciliation_completion_event_stager.py  reconciliation_control_evidence_repository.py
src/services/financial_reconciliation_service/app/ports/: __init__.py  reconciliation_control.py  reconciliation_repository_ports.py
src/services/financial_reconciliation_service/app/repositories/: __init__.py  reconciliation_repository.py
src/services/financial_reconciliation_service/app/routers/: __init__.py  reconciliation.py  reconciliation_mappers.py
src/services/financial_reconciliation_service/app/services/: __init__.py  reconciliation_service.py  (+1 more)
src/services/ingestion_service/: Dockerfile  pyproject.toml
src/services/ingestion_service/app/: ack_response.py  adapter_mode.py  bookkeeping_recovery.py  context.py  dependencies.py  enterprise_readiness.py  main.py  ops_controls.py  request_metadata.py  settings.py
src/services/ingestion_service/tests/: conftest.py
src/services/persistence_service/: Dockerfile  pyproject.toml
src/services/persistence_service/app/: consumer_manager.py  main.py  monitoring.py  web.py
src/services/persistence_service/tests/: conftest.py
src/services/pipeline_orchestrator_service/: Dockerfile  pyproject.toml
src/services/pipeline_orchestrator_service/app/: consumer_manager.py  dependencies.py  main.py  web.py
src/services/portfolio_aggregation_service/: Dockerfile  pyproject.toml
src/services/portfolio_aggregation_service/app/: __init__.py  consumer_manager.py  main.py  runtime.py  settings.py  web.py
src/services/portfolio_transaction_processing_service/: Dockerfile  __init__.py  pyproject.toml
src/services/portfolio_transaction_processing_service/app/: __init__.py  main.py  web.py
(+4834 files in other folders)
