# libs/portfolio-common/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-common"
version = "0.1.0"
description = "Common utilities, models, and configurations for the Lotus Core."
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.13.4",
    "confluent-kafka==2.14.2",
    "SQLAlchemy==2.0.51",
    "python-dotenv==1.2.2",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "tenacity==9.1.4",
    "alembic==1.18.4",
    "Mako==1.3.12",
    "python-json-logger==4.1.0",
    "prometheus-client==0.25.0"
]

[tool.setuptools.packages.find]
where = ["."]
