# services/event-replay-service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-replay-service"
version = "0.1.0"
description = "Lotus Core Event Replay Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "prometheus-fastapi-instrumentator==8.0.0",
    "python-dateutil==2.9.0.post0",
    "httpx==0.28.1"
]

[tool.setuptools.packages.find]
where = ["app"]
