[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-reconciliation-service"
version = "0.1.0"
description = "Lotus Core Financial Reconciliation Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.46",
    "asyncpg==0.30.0",
    "confluent-kafka==2.12.0",
    "tenacity==8.2.3",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "prometheus-fastapi-instrumentator==7.1.0",
    "httpx==0.28.1"
]

[tool.setuptools.packages.find]
where = ["app"]
