[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-reconciliation-service"
version = "0.1.0"
description = "Lotus Core Financial Reconciliation Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "confluent-kafka==2.14.2",
    "tenacity==9.1.4",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "prometheus-fastapi-instrumentator==8.0.0",
    "httpx==0.28.1"
]

[tool.setuptools.packages.find]
where = ["app"]
