# services/ingestion_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion_service"
version = "0.1.0"
description = "Portfolio Analytics - Ingestion Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.2",
    "uvicorn==0.49.0",
    "pydantic==2.13.4",
    "confluent-kafka==2.14.2",
    "structlog==26.1.0",
    "python-json-logger==4.1.0",
    "python-multipart==0.0.32",
    "prometheus-fastapi-instrumentator==8.0.2",
    "openpyxl==3.1.5"
]

[tool.setuptools.packages.find]
where = ["."]
