# services/persistence_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persistence-service"
version = "0.1.0"
description = "Portfolio Analytics - Generic Persistence Service"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0", # <-- REPLACES psycopg2-binary
    "confluent-kafka==2.14.2",
    "pydantic==2.13.4",
    "tenacity==9.1.4",
    "alembic==1.18.4",
    "python-dotenv==1.2.2",
    "structlog==26.1.0",
    "python-json-logger==4.1.0",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "prometheus-fastapi-instrumentator==8.0.0"
]

[tool.setuptools.packages.find]
where = ["app"]