[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-orchestrator-service"
version = "0.1.0"
description = "Pipeline stage-gate orchestration service for lotus-core"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.46",
    "asyncpg==0.30.0",
    "confluent-kafka==2.12.0",
    "pydantic==2.12.5",
    "tenacity==8.2.3",
    "python-dotenv==1.2.2",
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.35.0",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[tool.setuptools.packages.find]
where = ["app"]
