[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-orchestrator-service"
version = "0.1.0"
description = "Pipeline stage-gate orchestration service for lotus-core"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "confluent-kafka==2.14.2",
    "pydantic==2.13.4",
    "tenacity==9.1.4",
    "python-dotenv==1.2.2",
    "structlog==26.1.0",
    "python-json-logger==4.1.0",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "prometheus-fastapi-instrumentator==8.0.0",
]

[tool.setuptools.packages.find]
where = ["app"]
