# services/portfolio-aggregation-service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-aggregation-service"
version = "0.1.0"
description = "A service to schedule and execute portfolio aggregation jobs."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.46",
    "asyncpg==0.30.0",
    "confluent-kafka==2.12.0",
    "pydantic==2.12.5",
    "tenacity==8.2.3",
    "python-dotenv==1.0.1",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "prometheus-fastapi-instrumentator==7.0.0"
]

[tool.setuptools.packages.find]
where = ["app"]
