[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-transaction-processing-service"
version = "0.1.0"
description = "Atomic booked-transaction cost, cashflow, position, and replay processing."
requires-python = ">=3.11"
dependencies = [
    "portfolio-common==0.1.0",
    "fastapi==0.136.3",
    "prometheus-fastapi-instrumentator==8.0.0",
    "uvicorn[standard]==0.49.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
