# services/calculators/cost_calculator_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-calculator-service"
version = "0.1.0"
description = "Portfolio Analytics - Cost Calculator Service"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "confluent-kafka==2.14.2",
    "pydantic==2.13.4",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "prometheus-fastapi-instrumentator==8.0.0"
]

[tool.setuptools.packages.find]
where = ["app"]