# services/calculators/position-valuation-calculator/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "position-valuation-calculator"
version = "0.1.0"
description = "A service to calculate the market value of portfolio positions."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "confluent-kafka==2.14.2",
    "pydantic==2.13.4",
    "tenacity==9.1.4",
    "python-dotenv==1.2.2",
    "fastapi==0.138.2",
    "uvicorn[standard]==0.49.0",
    "prometheus-fastapi-instrumentator==8.0.2"
]

[tool.setuptools.packages.find]
where = ["app"]